--- a/LeaveMessage/MessageManageH/HTML/myBoard.html
+++ b/LeaveMessage/MessageManageH/HTML/myBoard.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/myBoard-Manager.css">
 
+    <script src="js/jquery.min.js"></script>
 
 </head>
 <body>
@@ -33,7 +34,7 @@
     </div>
     <!----------------------留言板内容-------------------------------->
     <div class="board">
-        <ul id="BoardShow">
+        <table id="BoardShow">
             <!--<li class="board-item">-->
                 <!--<div class="board-top">-->
                 <!--<div class="board-top-left">-->
@@ -50,7 +51,7 @@
                 <!--<div id="board-content">-->
                 <!--</div>-->
             <!--</li>-->
-        </ul>
+        </table>
     </div>
     <!-----------------------底部----------------------------->
     <div class="foot">
@@ -72,39 +73,82 @@
 
 </div>
 
-
 <!-----------------------------从数据库获取留言------------------------------------->
 <script type="text/javascript">
-    //获取发布模块类型
-    function pageReady()
-    {
-        alert("http://localhost:8080/messagemanage/showboard");
-        var  html="";
-        ("http://localhost:8080/messagemanage/showboard").
-        query(function (data){
+    //界面加载时就运行获取 留言数据的ajax
+    $(document).ready(function(){
+        // alert("欢迎进入");
+        loading();
+    })
 
-                $.each(data,function(i,o){
-                    html+=" <li class='board-item'> " +
-                        "<div class='board-top'>" +
-                        "<div class='board-top-left'>" +
-                        "<img src='img/小猫.png' class='headshot'/>";
-                    html+=                "<span id='username'>"+o.name+"</span>";
-                    html+=                "<span id='time'>"+o.time+"</span>" +
-                        "</div>";
-                    html+="<div class='board-top-right'>" +
-                        "<input type='image' src='img/删除.png' title='delete' class='del'> " +
-                        "<input type='image' src='img/重新编辑.png' title='edit' class='del'>" +
-                        "</div>" +
-                        "</div>";
-                    html+="<div id='board-content'>"+o.message+"</div>";
-                    html+="</li>";
-                });
-                $("#BoardShow").html(html);
-            }
-        )
+    //加载留言
+    function loading(){
+        var html="";
+        // alert("正在加载");
+        $.ajax({
+            url:"http://localhost:8080/messagemanage/showboard",
+            type:"get",
+            dataType:'json',
+            success:
+                function (data){
+                    // alert("请稍后");
+                    $.each(data.jsonData,function(i,o){
+
+                        html+="<tr id='board-content'><td>" +
+                            "<div class='board-top'>" +
+                                   "<div class='board-top-left'>" +
+                                        "<img src='img/小猫.png' class='headshot'/>";
+                        html+=          "<span id='username'>"+o.name+"</span>";
+                        html+=          "<span id='time'>"+o.time+"</span>" +
+                                   "</div>";
+                        html+=     "<div class='board-top-right'>" +
+                                        "<input type='image' src='img/删除.png' title='delete' class='del'> " +
+                                        "<input type='image' src='img/重新编辑.png' title='edit' class='del'>" +
+                                  "</div>" +
+                            "</div>" ;
+                        html+="<div id='board-incontent'>"+o.message+"</div></td></tr>";
+                    });
+
+                    $("#BoardShow").html(html);
+                }
+        });
     }
 
 </script>
+
+
+<!-----------------------------从数据库获取留言------------------------------------->
+<!--<script type="text/javascript">-->
+    <!--//获取发布模块类型-->
+    <!--function pageReady()-->
+    <!--{-->
+        <!--alert("http://localhost:8080/messagemanage/showboard");-->
+        <!--var  html="";-->
+        <!--("http://localhost:8080/messagemanage/showboard").-->
+        <!--query(function (data){-->
+
+                <!--$.each(data,function(i,o){-->
+                    <!--html+=" <li class='board-item'> " +-->
+                        <!--"<div class='board-top'>" +-->
+                        <!--"<div class='board-top-left'>" +-->
+                        <!--"<img src='img/小猫.png' class='headshot'/>";-->
+                    <!--html+=                "<span id='username'>"+o.name+"</span>";-->
+                    <!--html+=                "<span id='time'>"+o.time+"</span>" +-->
+                        <!--"</div>";-->
+                    <!--html+="<div class='board-top-right'>" +-->
+                        <!--"<input type='image' src='img/删除.png' title='delete' class='del'> " +-->
+                        <!--"<input type='image' src='img/重新编辑.png' title='edit' class='del'>" +-->
+                        <!--"</div>" +-->
+                        <!--"</div>";-->
+                    <!--html+="<div id='board-content'>"+o.message+"</div>";-->
+                    <!--html+="</li>";-->
+                <!--});-->
+                <!--$("#BoardShow").html(html);-->
+            <!--}-->
+        <!--)-->
+    <!--}-->
+
+<!--</script>-->
 
 
 
